--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ defaults:
   values:
     layout: post
     permalink: "/posts/:title/"
+    description:
+    id:
 - scope:
     path: ''
     type: pages
