--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ defaults:
     type: posts
   values:
     layout: post
-    permalink: "/posts/:title/"
+    permalink: "/:title/"
     description: 
     id: 
 - scope:
