--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,10 @@ defaults:
   values:
     layout: post
     permalink: "/:title/"
-    cover-image: 
-    description: 
-    order-id: 
+    cover-image:
+    small-text: 
+    description:
+    order-id:
 - scope:
     path: ''
     type: pages
@@ -29,7 +30,7 @@ sass:
 permalink: pretty
 description: is a french graphic designer based in New York City currently working
   at Mother Design.
-keywords: 
+keywords:
 project-order:
 - 1-TheDean
 - project-id-2
